log
Mon 08 May 2023 02:22:11 AM UTC: 
 tests:  0|4
total_score: 0/70
e2d0392
Mon 08 May 2023 02:25:50 AM UTC: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:6: error: array subscript ‘Heap {aka struct Heap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   37 |   aux->heapArray = malloc(sizeof(void *) * 3);
      |      ^~
heap.c:36:25: note: referencing an object of size 8 allocated by ‘malloc’
   36 |   Heap * aux = (Heap *) malloc(sizeof(Heap *));
      |                         ^~~~~~~~~~~~~~~~~~~~~~
heap.c:38:6: error: array subscript ‘Heap {aka struct Heap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   38 |   aux->capac = 3;
      |      ^~
heap.c:36:25: note: referencing an object of size 8 allocated by ‘malloc’
   36 |   Heap * aux = (Heap *) malloc(sizeof(Heap *));
      |                         ^~~~~~~~~~~~~~~~~~~~~~
heap.c:39:6: error: array subscript ‘Heap {aka struct Heap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   39 |   aux->size = 0;
      |      ^~
heap.c:36:25: note: referencing an object of size 8 allocated by ‘malloc’
   36 |   Heap * aux = (Heap *) malloc(sizeof(Heap *));
      |                         ^~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
fc41d2f
Mon 08 May 2023 02:27:04 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:6: error: array subscript ‘Heap {aka struct Heap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   37 |   aux->heapArray = malloc(sizeof(heapElem) * 3);
      |      ^~
heap.c:36:25: note: referencing an object of size 8 allocated by ‘malloc’
   36 |   Heap * aux = (Heap *) malloc(sizeof(Heap *));
      |                         ^~~~~~~~~~~~~~~~~~~~~~
heap.c:38:6: error: array subscript ‘Heap {aka struct Heap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   38 |   aux->capac = 3;
      |      ^~
heap.c:36:25: note: referencing an object of size 8 allocated by ‘malloc’
   36 |   Heap * aux = (Heap *) malloc(sizeof(Heap *));
      |                         ^~~~~~~~~~~~~~~~~~~~~~
heap.c:39:6: error: array subscript ‘Heap {aka struct Heap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   39 |   aux->size = 0;
      |      ^~
heap.c:36:25: note: referencing an object of size 8 allocated by ‘malloc’
   36 |   Heap * aux = (Heap *) malloc(sizeof(Heap *));
      |                         ^~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
06f1ad1
Mon 08 May 2023 02:27:22 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:38:6: error: array subscript ‘Heap {aka struct Heap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   38 |   aux->capac = 3;
      |      ^~
heap.c:36:25: note: referencing an object of size 8 allocated by ‘malloc’
   36 |   Heap * aux = (Heap *) malloc(sizeof(Heap *));
      |                         ^~~~~~~~~~~~~~~~~~~~~~
heap.c:39:6: error: array subscript ‘Heap {aka struct Heap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   39 |   aux->size = 0;
      |      ^~
heap.c:36:25: note: referencing an object of size 8 allocated by ‘malloc’
   36 |   Heap * aux = (Heap *) malloc(sizeof(Heap *));
      |                         ^~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0aaf017
Mon 08 May 2023 02:27:58 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d895993
Mon 08 May 2023 02:28:16 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
8bc2036
Mon 08 May 2023 02:28:29 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3836a29
Mon 08 May 2023 02:28:39 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
bb738a2
Mon 08 May 2023 02:31:19 AM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
76a1439
Mon 08 May 2023 02:32:41 AM UTC: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|3
total_score: 10/70
bd56335
Mon 08 May 2023 02:33:34 AM UTC: 
 heap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  2|2
total_score: 20/70
f892f04
Mon 08 May 2023 02:36:28 AM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
af527b7
Mon 08 May 2023 02:42:00 AM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  2|2
total_score: 20/70
70a37d4
Mon 08 May 2023 02:42:50 AM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  3|2
total_score: 25/70
9e8edd1
Mon 08 May 2023 02:43:16 AM UTC: 
 heap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  3|2
total_score: 25/70
c55e5f4
Mon 08 May 2023 03:01:53 AM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:44:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   44 |     return NULL;
      |            ^~~~
heap.c:32:6: note: declared here
   32 | void heap_push(Heap* pq, void* data, int priority){
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
62058ac
Mon 08 May 2023 03:02:00 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
2346f11
Mon 08 May 2023 03:06:35 AM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  3|2
total_score: 25/70
ce80d9d
Mon 08 May 2023 03:06:46 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
7762904
Mon 08 May 2023 03:06:52 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
ec48c68
Mon 08 May 2023 03:09:47 AM UTC: 
 heap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 25/70
8be7512
Mon 08 May 2023 03:10:40 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
d7641be
Mon 08 May 2023 03:13:23 AM UTC: 
 heap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 25/70
31efbab
Mon 08 May 2023 03:17:33 AM UTC: 
 heap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 45/70
fab71d4
Mon 08 May 2023 10:06:00 PM UTC: 
 heap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  7|1
total_score: 45/70
6f6d2eb
Thu 11 May 2023 04:17:37 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
6333aec
Thu 11 May 2023 04:38:06 PM UTC: 
 heap.c | 34 ++++++++++++++++++++++++++++++++++
 1 file changed, 34 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:81:10: error: variable ‘auxData’ set but not used [-Werror=unused-but-set-variable]
   81 |   void * auxData;
      |          ^~~~~~~
heap.c:80:17: error: variable ‘auxPrio’ set but not used [-Werror=unused-but-set-variable]
   80 |   int pos = 0 , auxPrio;
      |                 ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d3ada01
Thu 11 May 2023 04:38:15 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:81:10: error: unused variable ‘auxData’ [-Werror=unused-variable]
   81 |   void * auxData;
      |          ^~~~~~~
heap.c:80:17: error: unused variable ‘auxPrio’ [-Werror=unused-variable]
   80 |   int pos = 0 , auxPrio;
      |                 ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
693d6c8
Thu 11 May 2023 04:38:54 PM UTC: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  7|1
total_score: 45/70
34b9110
Thu 11 May 2023 04:39:47 PM UTC: 
 heap.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  7|1
total_score: 45/70
926ea9a
Thu 11 May 2023 04:41:14 PM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:83:31: error: expected ‘;’ before ‘)’ token
   83 |   for(int i = 0 ; i < pq->size)
      |                               ^
      |                               ;
Compilation failed
efc5b7f
Thu 11 May 2023 04:41:33 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:83:32: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   83 |   for(int i = 0 ; i < pq->size , i++)
      |                                ^
heap.c:83:37: error: expected ‘;’ before ‘)’ token
   83 |   for(int i = 0 ; i < pq->size , i++)
      |                                     ^
      |                                     ;
cc1: all warnings being treated as errors
Compilation failed
81241ed
Thu 11 May 2023 04:41:42 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
afe9d28
